--- a/requirements.txt
+++ b/requirements.txt
@@ -11,21 +11,30 @@ distlib==0.3.1
 Django==3.1.2
 djangorestframework==3.12.1
 extract-social-media==0.4.0
+extruct==0.10.0
 filelock==3.0.12
 future==0.18.2
+html-text==0.5.2
 html-to-etree==0.2.0
 html5==0.0.9
+html5lib==1.1
 htmlmetadata==1.1
 idna==2.10
+isodate==0.6.0
 jmespath==0.10.0
+jstyleson==0.0.2
 lxml==4.5.2
 metadata-parser==0.10.0
+mf2py==1.1.2
 oauthlib==3.1.0
 pipenv==2020.8.13
 pycosat==0.6.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-twitter==3.5
 pytz==2020.1
+rdflib==4.2.2
+rdflib-jsonld==0.5.0
 redis==3.5.3
 requests==2.24.0
 requests-oauthlib==1.3.0
