--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,78 @@
-appdirs==1.4.4
+aiobotocore==0.9.3
+aiofiles==0.3.2
+aiohttp==3.3.2
+appdirs==1.4.3
 asgiref==3.2.10
-attrs==20.2.0
-beautifulsoup4==4.9.3
+async-generator==1.10
+async-timeout==3.0.0
+attrs==19.3.0
+beautifulsoup4==4.8.1
 boto3==1.15.15
-botocore==1.18.15
+botocore==1.18.16
 cattrs==1.0.0
 cchardet==2.1.6
-certifi==2020.6.20
+certifi==2019.9.11
+cfscrape==2.1.1
 chardet==3.0.4
 chromote==0.4.0
 clearbit==0.1.7
 conda==4.3.16
+coverage==5.3
+cricket==0.2.5
 distlib==0.3.1
 Django==3.1.2
 djangorestframework==3.12.1
+docutils==0.15.2
 EasyProcess==0.3
+entrypoints==0.3
+environs==8.0.0
 extract-social-media==0.4.0
 extruct==0.10.0
 facebook-sdk==3.1.0
+fake-useragent==0.1.11
 filelock==3.0.12
+flake8==3.5.0
 future==0.18.2
 html-text==0.5.2
 html-to-etree==0.2.0
 html5==0.0.9
 html5lib==1.1
 htmlmetadata==1.1
-idna==2.10
+idna==2.7
 isodate==0.6.0
-jmespath==0.10.0
+jmespath==0.9.4
+jsonschema==3.2.0
 jstyleson==0.0.2
 lxml==4.5.2
+marshmallow==3.8.0
+mccabe==0.6.1
 metadata-parser==0.10.0
 mf2py==1.1.2
+multidict==4.6.1
+numpy==1.17.4
 oauthlib==3.1.0
+peewee==3.6.4
 pipenv==2020.8.13
+psutil==5.4.6
+pycodestyle==2.3.1
 pycosat==0.6.3
+pydub==0.22.1
+pyee==7.0.1
+pyflakes==1.6.0
+Pygments==2.7.1
 pyparsing==2.4.7
+pyppeteer==0.0.25
+pyppeteer-stealth==1.0.0
+pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 python-facebook-api==0.7.1
 python-twitter==3.5
 pytz==2020.1
-PyVirtualDisplay==1.3.2
+PyYAML==5.1.2
 rdflib==4.2.2
 rdflib-jsonld==0.5.0
-redis==3.5.3
-requests==2.24.0
+requests==2.20.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 responses==0.11.0
@@ -52,14 +80,23 @@ ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
 s3transfer==0.3.3
 selenium==3.141.0
-six==1.15.0
-soupsieve==2.0.1
+six==1.13.0
+soupsieve==1.9.5
+SpeechRecognition==3.8.1
 sqlparse==0.4.1
+swigibpy==0.4.1
+tkreadonly==0.6.1
+tqdm==4.50.2
 undetected-chromedriver==1.5.0
-urllib3==1.25.10
+urllib3==1.24.3
+user-agent==0.1.9
+validator-collection==1.5.0
 virtualenv==20.0.31
 virtualenv-clone==0.5.4
 w3lib==1.22.0
 webencodings==0.5.1
 websocket-client==0.57.0
+websockets==6.0
+wrapt==1.11.2
 xvfbwrapper==0.2.9
+yarl==1.3.0
